Tue Jun 10 09:59:44 2003  George Lebl <jirka@5z.com>

	* configure.in: remove removed files from the generated files list

Tue Jun 10 09:23:16 2003  George Lebl <jirka@5z.com>

	* config/Default.desktop.in, config/Xsession.in, config/Makefile.am:
	  Apparently I can't read.  The original discussion actually
	  mentioned what I thought "Xclients" are and named it "default".
	  Also there is the "custom" type, but there is no .desktop for that

	* daemon/slave.c: actually compile

Mon Jun 09 17:12:04 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: if Exec=failsafe exec the internal xterm failsafe
	  session.

Mon Jun 09 17:01:27 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c, gui/gdmphotosetup.c: use $HOME/.face by default

	* daemon/slave.c: when no home dir, try /tmp as the home and not /

	* config/*, daemon/gdm.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter.c, gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_configuration.h,
	  gui/greeter/greeter_session.[ch]:  Rework the session setup as
	  discussed with Oswald Buddenhagen, the kdm maintainer.   Now the
	  sessions are .desktop files and we have one happy Xsession file
	  which parses that .desktop file and runs the appropriate command.
	  Also store preferences such as last session and language in .dmrc.
	  The session desktops are now in /etc/X11/dm/Sessions since they can
	  be shared by kdm as well in the future.  The setup needs a bit
	  more tuning I think and it's not all tested.

Mon Jun 09  Brian Cameron <Brian.Cameron@Sun.COM>

	* gui/modules/keymouselistener.c: Fixed bug that caused the
	keymouselistener to get into a broken state that would cause
	applications to freeze.

Sun Jun 08 23:49:28 2003  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h, daemon/verify-pam.c: Add patch
	  from Brian Cameron to fix #106537 (at lest the default/login
	  thing).  That is read some solaris preference file when logging
	  in.

Fri Jun 06 19:07:22 2003  George Lebl <jirka@5z.com>
