@@ -1,23 +1,30 @@
 #!/bin/sh
 #
-# Note that this is SORT OF LIKE an X session, but not quite.  You get a
-# .desktop file as the first argument.  You must here then parse the
-# Exec= line out of this file and use that.
-# As a special case, the Exec line can be:
+# This is SORT OF LIKE an X session, but not quite.  You get a command as the
+# first argument (it could be multiple words, so run it with "eval").  As a
+# special case, the command can be:
 #  failsafe - Run an xterm only
-#  Xclients - Run the appropriate Xclients startup (see the code below)
+#  default - Run the appropriate Xclients startup (see the code below)
+#  custom - Run ~/.xsession and if that's not available run 'default'
 #
-# You should also handle an argument of 'failsafe'
+# (Note that other arguments could also follow, but only the command one is
+# right now relevant and supported)
 #
-# Note that output is ALREADY redirected to .xsession-errors in GDM.  This way
+# The output is ALREADY redirected to .xsession-errors in GDM.  This way
 # .xsession-errors actually gets more output such as if the PreSession script
-# is failing.  We wish to be robust don't we?
+# is failing.  We wish to be robust don't we?  In case you wish to use an
+# existing script for other DM's, you can just not redirect when GDMSESSION
+# is set.  GDMSESSION will always be set from gdm.
 #
 # Also note that this is not run as a login shell, this is just executed.
 # This is why we source the profile files below.
 #
 # based on:
 # $XConsortium: Xsession /main/10 1995/12/18 18:21:28 gildea $
+
+# this will go into the .xsession-errors along with all other echo's
+# good for debugging where things went wrong
+echo "Xsession: Beginning session setup..."
 
 # First read /etc/profile and .profile
 test -f /etc/profile && . /etc/profile
@@ -28,13 +35,7 @@ test -f $HOME/.xprofile && . $HOME/.xprofile
 
 zenity=`which zenity`
 
-command=
-if [ -z "$1" ] || [ x"$1" = xfailsafe ] ; then
-  command=failsafe
-else
-  # Here we parse the .desktop file
-  command=`grep 'Exec=' "$1" | sed 's/^Exec=//'`
-fi
+command="$1"
 
 if [ -z "$command" ] ; then
   command=failsafe
@@ -165,7 +166,7 @@ if [ "x$command" = "xcustom" ] ; then
   if [ -x "$HOME/.xsession" ]; then
     command="$HOME/.xsession"
   else
-    echo "Cannot find ~/.xsession will try the default session"
+    echo "Xsession: Cannot find ~/.xsession will try the default session"
     command="default"
   fi
 fi
@@ -178,9 +179,9 @@ if [ "x$command" = "xdefault" ] ; then
   elif [ -x /etc/X11/Xclients ]; then
     command="/etc/X11/Xclients"
   else
-    echo "Cannot find Xclients"
+    echo "Xsession: Cannot find Xclients"
     # FIXME: kind of an evil failsafe
-    command=xsm
+    command="xsm"
   fi
 fi
 
@@ -190,9 +191,11 @@ if [ -n "$sshagent" ] && [ -x "$sshagent" ] && [ -z "$SSH_AUTH_SOCK" ]; then
     command="$sshagent -- $command"
 fi
 
-exec $command
+echo "Xsession: Setup done, will execute: $command"
 
-echo "Executing: $command failed, will run xterm"
+eval exec $command
+
+echo "Xsession: Executing $command failed, will run xterm"
 
 if [ -n "$zenity" ] ; then
 	$zenity --info --text "I could not start your session and so I have started the failsafe xterm session.  Windows now have focus only if you have your cursor above them.  To get out of this mode type \"exit\" in the window in the upper left corner"
