@@ -2,6 +2,12 @@ Ahh news...
 
 2.4.2.x stuff:
 
+- Completely new session setup, born out of discussions with Oswald
+  Buddenhagen, the KDM maintainer, which will bring about common session
+  setup for both GDM and KDM.  We now basically have a common
+  /etc/X11/dm/Sessions directory where there are .desktop files are stored
+  which describe sessions and these will be shared among KDM and GDM.
+
 - The greeter.dtd is updated and there is theme creation documentation
   (Brian Cameron, Aidan Butler, me)
 
